feat(#977): list members
A user can now list the members of his currently loged in
project.
